Remove demo controller